// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Featured media renders correctly 1`] = `
<jest>
  <div
    class="ratio ratio-16x9"
  >
    <iframe
      src="https://www.youtube.com/embed/VFYlYeFAEH4"
    />
  </div>
  <div
    class="bg-light p-3"
  >
    
    Media description text goes here.
  
  </div>
</jest>
`;

exports[`OE - Featured media renders correctly with an image 1`] = `
<jest>
  <img
    class="img-fluid"
    src="https://picsum.photos/1000/400?random=1"
  />
  <div
    class="bg-light p-3"
  >
    
    Media description text goes here.
  
  </div>
</jest>
`;
